<resources>

    <string name="app_name">Culture Connect</string>
    <string name="content_description">Content Description</string>

    <style name="first_title">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Temukan pesona Solo yang autentik dengan panduan lengkap</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <!--    Home Fragment-->
    <style name="welcome">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Have a Great Day !</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/gray</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="username">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Dontol</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <string name="search_hint">Search here …</string>

    <style name="recommendationTitle">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Recommendation cafe for you</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="itemTitle">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">List all cafe</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <!--    Card View Recommendation-->
    <style name="tv_recommendation_title">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Pixel Coffee &amp; Kitchen</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="tv_recommendation_rating">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">4,6 (1.037)</item>
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">@color/gray</item>
    </style>

    <style name="tv_recommendation_price">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Kedai Kopi - Rp 25-50 rb</item>
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">@color/gray</item>
    </style>

    <style name="btn_direction">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Direction</item>
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="btn_detail">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">See detail</item>
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textStyle">bold</item>
    </style>

    <!--    Card View Item -->
    <style name="tv_title">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Namu Korean Cafe Solo</item>
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <!--    Bottom Menu-->
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>

    <!--    Detail Activity-->
    <style name="detailTitle">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Kraton Solo</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="detailDescription">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Kraton Solo adalah sebuah kompleks istana yang terletak di
            Surakarta, Jawa Tengah, Indonesia. Kraton ini merupakan pusat pemerintahan dan tempat
            tinggal bagi Sultan Surakarta dan keluarganya. Kraton ini juga merupakan pusat
            kebudayaan bagi masyarakat Jawa Surakarta.
        </item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <!--    Favorite Fragment-->
    <style name="bookmarkTitle">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Bookmark</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

<!--    Maps Fragment-->
    <style name="maps_title">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:text">Nearest Cafe</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <string name="description">Description</string>
    <string name="pasar_legi">Pasar Legi</string>
    <string name="bookmark">Bookmark</string>
    <string name="image_of_item_row">Image of item row</string>
    <string name="dummy">Pasar Legi</string>
    <string name="bookmark_icon">Bookmark Icon</string>
    <string name="button">Masuk dengan Google</string>
    <string name="desc">"Atau masuk dengan "</string>
    <!--    <string name="content_description">Animation\n</string>-->
    <string name="email">Email\n</string>
    <string name="input_your_email">Input your email</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="login">MASUK</string>
    <string name="masuk_ke_akun_anda">Masuk ke Akun Anda</string>
    <string name="atau_sudah_punya_akun_register_disini">Atau sudah punya akun ?</string>
    <string name="google_logo">Google Logo</string>
    <string name="registrasi">Registrasi</string>
    <string name="silahkan_registrasi_terlebih_dahulu">Silahkan Registrasi Terlebih Dahulu</string>
    <string name="username">Username</string>
    <string name="hint_username">Input your username</string>
    <string name="registrasi_dengan_google">Registrasi dengan Google</string>
    <string name="atau_registrasi_dengan">Atau registrasi dengan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash1">Temukan kafe yang cocok untuk Anda di kota Solo!</string>
    <string name="next">See Caffe</string>
    <string name="splash2">Temukan pesona Solo yang autentik dengan panduan lengkap</string>
    <string name="splash3">Pilih preferensi Anda kopi, suasana, fasilitas, dan lainnya agar kami bisa merekomendasikan kafe yang sempurna.</string>
    <string name="selesai">Selesai</string>
    <string name="pengaturan">Your Profile </string>
    <string name="profile">Profile</string>
    <string name="akun_anda">Account Information</string>
    <string name="template">Harits</string>
    <string name="data_diri">Data Diri</string>
    <string name="nama_lengkap_anda">Nama Lengkap anda</string>
    <string name="email_anda">Email Anda</string>
    <string name="logout">Logout</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="rules1">Untuk masuk akun , masukkan Email dan Kata Sandi</string>
    <string name="forgot">Lupa Kata Sandi ?</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="data_akun">Data Akun</string>
    <string name="Nama">Nama</string>
    <string name="belum_punya_akun_daftar">Belum punya akun ? daftar</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="ceritakan_harimu">Ceritakan harimu</string>
    <string name="ceritakan_desc">Ceritakan harimu dengan satu kalimat</string>
    <string name="tulis_disini">Tulis disini</string>
    <string name="kirim">Kirim</string>
    <string name="hasil_mood">Mood Results</string>
    <string name="kata_kata">Words</string>
    <string name="cari_tempat_sesuai_mood">CARI TEMPAT SESUAI MOOD</string>
    <string name="cafe_recommendations">Cafe Recommendations</string>
    <string name="search">Search</string>
</resources>