<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".ui.recomendation.MoodResultActivity">


    <TextView
        android:id="@+id/moodResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_mood"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        style=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivMoodResult"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img"
        app:layout_constraintTop_toBottomOf="@id/moodResultTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvQuoteMood"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/kata_kata"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMoodResult" />

    <TextView
        android:id="@+id/tvDescriptionQuote"
        android:layout_width="280dp"
        android:layout_height="89dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivMoodResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGetRecCafe"/>

    <Button
        android:id="@+id/btnGetRecCafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="301dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#1B3E3B"
        android:text="@string/next"
        android:textColor="@color/white"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>