<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E7676"
    tools:context=".ui.splash.onboarding.ThirdScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivThirdBoarding"
            android:layout_width="415dp"
            android:layout_height="404dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSplash3"
            android:layout_width="384dp"
            android:layout_height="166dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:padding="15dp"
            android:text="@string/splash3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivThirdBoarding" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:text="@string/selesai"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSplash3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>